# xarm_shuidi_description

./: CMakeLists.txt  README.md  package.xml
config/: diff_drive_controller.yaml
gazebo/: lidar.xacro  shuidi.gazebo.xacro
launch/: display.launch.py  gazebo_display.launch.py
ros2_control/: shuidi.ros2_control.xacro
rviz/: show_urdf.rviz
urdf/: body.urdf.xacro  caster.urdf.xacro  shuidi.urdf.xacro  wheel.urdf.xacro  xarm_shuidi.urdf.xacro
urdf/components/: batteries.urdf.xacro  body.urdf.xacro  caster.urdf.xacro  wheel.urdf.xacro
world/: empty.world
xacro/: imu.xacro
